# jobseeker

./: .env.example  .gitignore  README.md  job_search_automation_full_requirements.md  pyproject.toml  run_dashboard.cmd  run_dashboard.sh
docker/kasm-local/: docker-compose.yml
job_automation/: __init__.py  logging_config.py  main.py  paths.py
job_automation/auth/: __init__.py  passwords.py  sessions.py
job_automation/browser/: browser_manager.py  credentials.py  kasm_client.py  portal_login.py  session_manager.py
job_automation/config/: job_search_classify_rules.json  loader.py
job_automation/dashboard/: app.py  search_service.py
job_automation/dashboard/static/: app.js  (+2 more)
job_automation/dedupe/: deduplicate.py  hash_builder.py  similarity.py  url_normalizer.py
job_automation/email/: outlook_imap.py
job_automation/etl/: cleaner.py  parsers.py  pipeline.py  posted_parser.py  salary_parser.py
job_automation/models/: domain.py
job_automation/orchestration/: runner.py  scheduler.py
job_automation/portals/: __init__.py  base.py  builtin.py  glassdoor.py  hiringcafe.py  jobright.py  utils.py
job_automation/rules/: rule_engine.py
job_automation/storage/: database.py  models.py  repositories.py
scripts/: run_daily.bat  run_daily.sh  start_kasm_local.cmd  start_kasm_local.sh  stop_kasm_local.cmd  stop_kasm_local.sh
tests/: test_auth.py  test_builtin_e2e.py  test_builtin_flow.py  test_core.py  test_credentials.py  test_e2e.py  test_outlook_imap.py  test_portal_login.py  test_posted_parser.py  test_session_manager.py
tests/fixtures/: builtin_board.py
(+2 files in other folders)
