[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-automation"
version = "0.1.0"
description = "Automated job search, filtering, and review dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
job-automation = "job_automation.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["job_automation*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
